--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <script src="lib/d3-bboxCollide.min.js"></script>
 
         <!-- Custom JavaScript file -->
-        <script src="createORCAVisual.js"></script>
+        <script src="top-contributor-network/createORCAVisual.js"></script>
 
 	</head>
 	<body>
@@ -32,221 +32,6 @@
             </div>
         </div>
 
-        <script>
-            let params = new URLSearchParams(window.location.search)
-            const REPOSITORY = "stac";
-
-            let REPOSITORY_FULL = "stac-utils/pystac" // Default
-            if (REPOSITORY === "terraform") REPOSITORY_FULL = "hashicorp/terraform"
-
-            let REPOSITORY_NAME = REPOSITORY_FULL.substring(REPOSITORY_FULL.indexOf("/") + 1)
-
-            // Replace the "title-repo-name" with the repository name
-            document.getElementById("title-repo-name").innerHTML = REPOSITORY_FULL
-            // Replace all the classed "repo-name" with the repository name
-            document.querySelectorAll(".repo-name").forEach(d => d.innerHTML = REPOSITORY_FULL)
-            document.querySelectorAll(".repo-name-only").forEach(d => d.innerHTML = REPOSITORY_NAME)
-
-            /////////////////////////////////////////////////////////
-            ///////////////////////// START /////////////////////////
-            /////////////////////////////////////////////////////////
-
-            // Hide the ORCA Recipients explanation if the repository is not pdfjs
-            // if(REPOSITORY !== "pdfjs") document.getElementById("orca-recipients").style.display = `none`
-            // if(REPOSITORY === "terraform") document.getElementById("terraform-note").style.display = `none`
-
-            ////////////////// Datasets to Read in //////////////////
-            let promises = []
-            promises.push(d3.csv(`data/${REPOSITORY}/top_contributors.csv`))
-            promises.push(d3.csv(`data/${REPOSITORY}/repositories.csv`))
-            promises.push(d3.csv(`data/${REPOSITORY}/links.csv`))
-            // promises.push(d3.csv(`data/${REPOSITORY}/remaining_contributors.csv`)) // not required
-            if (REPOSITORY === "pdfjs") promises.push(d3.csv(`data/${REPOSITORY}/orca_recipients.csv`))  // not required
-
-            /////////////////// Fonts to activate ///////////////////
-            const FONT_FAMILY = "Atkinson Hyperlegible"
-            document.fonts.load(`normal 400 10px "${FONT_FAMILY}"`)
-            document.fonts.load(`italic 400 10px "${FONT_FAMILY}"`)
-            document.fonts.load(`normal 700 10px "${FONT_FAMILY}"`)
-            document.fonts.load(`italic 700 10px "${FONT_FAMILY}"`)
-
-            /////////////////// Figure out sizing ///////////////////
-            // Get the div container that will hold the chart
-            let container = document.getElementById("chart-container")
-            // Get the width of the container
-            let width = container.offsetWidth
-            // You can set the height to anything you want, but the same as the width is the default
-            let height = width
-
-            ///////////////////// Start Drawing /////////////////////
-            // Set-up the visual - Doesn't draw anything yet
-            // NOTE: This visual still uses a random "ORCA_LEVEL" variable for now
-            let ORCAVisual = createORCAVisual(container)
-                .width(width)
-                .height(height)
-                .repository(REPOSITORY_FULL)
-
-            // Read in the data and create the visual
-            document.fonts.ready.then(() => {
-                Promise.all(promises).then(values => {
-                    let formatDigit = d3.format(",.2r")
-                    let formatPercentage = d3.format(".0%")
-
-                    // Create a deep copy of the data in values
-                    let data_raw = []
-                    data_raw.push(JSON.parse(JSON.stringify(values[0]))) // top contributors
-                    data_raw.push(JSON.parse(JSON.stringify(values[1]))) // repositories
-                    data_raw.push(JSON.parse(JSON.stringify(values[2]))) // links
-                    if(values[3]) data_raw.push(JSON.parse(JSON.stringify(values[3]))) // possible remaining contributors
-                    if(values[4]) data_raw.push(JSON.parse(JSON.stringify(values[4]))) // possible orca recipients
-
-                    /////////////////////////////////////////////////
-                    // Very specific to this example, but get some statistics on the data and put this in the intro text
-                    // First check that the values[3] belongs to the remaining contributors and not the orca recipients
-                    const remainingContributorsPresent = values[3] && values[3][0].author_name !== undefined
-                    let orcaPresent = false
-                    if(remainingContributorsPresent && (values[4] && values[4][0].name !== undefined)) orcaPresent = true
-                    else if(!remainingContributorsPresent && (values[3] && values[3][0].name !== undefined)) orcaPresent = true
-
-                    if(!orcaPresent) {
-                        // Hide all those with a class of orca-note
-                        document.querySelectorAll(".orca-note").forEach(d => d.style.display = `none`)
-                    }// if
-
-                    /////////////////////////////////////////////////
-                    if(remainingContributorsPresent) {
-                        let num_contributors = values[0].length + values[3].length
-                        document.getElementById("repo-num-contributors").innerHTML = `~${formatDigit(num_contributors)} `
-                    }// if
-                    
-                    // How many contributors are there in the inner two rings
-                    document.querySelectorAll(".top-contributor-num").forEach(d => d.innerHTML = `${formatDigit(values[0].length)} `)
-
-                    // How many repositories are in the visual
-                    // document.getElementById("top-repo-num").innerHTML = `, at least, ${formatDigit(values[1].length)} other`
-
-                    /////////////////////////////////////////////////
-                    // It expects the four datasets of contributors (authors), repositories, links between contributors and repositories, and remaining contributors, in that order
-                    ORCAVisual(values)
-
-                    /////////////////////////////////////////////////
-                    // Get the start date of the central repository & the most recent commit date in this repository
-                    // Find the REPOSITORY_FULL in the links dataset
-                    let central_repo = values[1].find(d => d.repo === REPOSITORY_FULL)
-                    let formatDate = d3.timeFormat("%B %Y")
-                    let formatDateLong = d3.utcFormat("%B %-e, %Y")
-                    // First commit date
-                    // document.getElementById("first-commit-date").innerHTML = ` in ${formatDate(central_repo.createdAt)}`
-                    // Latest commit date
-                    // // It should be as simple as this:
-                    // document.getElementById("last-commit-date").innerHTML = `Up to ${formatDateLong(central_repo.updatedAt)}`
-                    // However, the dataset underlying the contributors is not as up to date as the repositories. So we need to get the "most recent" commit date from the links dataset
-                    // If both the repo and contribution are up to date, it's better to use the line above and not what I do here below
-                    // Get all the objects from values[2] where the target is the central repository
-                    let links_to_central = values[2].filter(d => d.target.data && d.target.data.repo === REPOSITORY_FULL)
-                    // Now get the most recent commit date from the links to the central repository
-                    let most_recent_commit = d3.max(links_to_central, d => d.commit_sec_max)
-                    // document.getElementById("last-commit-date").innerHTML = `Including commits up to ${formatDateLong(most_recent_commit)}`
-
-                    /////////////////////////////////////////////////
-                    // Bar chart
-                    if(remainingContributorsPresent) { // Is the dataset with remaining contributors present?
-                        // Update the bar chart in the intro
-                        let bar_chart = document.getElementById("commit-bar-chart")
-                        // Get the sum of commits made by the remaining contributors
-                        let sum_remaining = d3.sum(values[3], d => d.commit_count)
-                        // Get the sum of commits made by the non-ORCA contributors
-                        let sum_non_orca = d3.sum(values[0].filter(c => c.orca_received === false), d => d.link_central.commit_count)
-                        // Get the sum of commits made by the ORCA contributors
-                        let sum_orca = d3.sum(values[0].filter(c => c.orca_received === true), d => d.link_central.commit_count)
-
-                        // Update the bar chart slice width
-                        bar_chart.style.gridTemplateColumns = `${sum_orca}fr ${sum_non_orca}fr ${sum_remaining}fr`
-
-                        // Number of commits by top contributors
-                        document.getElementById("num-commits-top").innerHTML = `${formatDigit(sum_non_orca + sum_orca)} `
-
-                        // Percentage of commits by top contributors
-                        document.getElementById("percentage-commits-top").innerHTML = `${formatPercentage((sum_non_orca + sum_orca) / (sum_remaining + sum_non_orca + sum_orca))} `
-
-                        // Number of people
-                        let num_orca = values[0].filter(c => c.orca_received === true).length
-                        let num_non_orca = values[0].filter(c => c.orca_received === false).length
-                        document.getElementById("num-orca").innerHTML = `${num_orca < 10 ? num_orca : formatDigit(num_orca)} `
-                        document.getElementById("num-orca-commits").innerHTML = ` [having made ${formatDigit(sum_orca)} commits]`
-                        document.getElementById("num-non-orca").innerHTML = `${num_non_orca < 10 ? num_non_orca : formatDigit(num_non_orca)} `
-                        document.getElementById("num-non-orca-commits").innerHTML = ` [having made ${formatDigit(sum_non_orca)} commits]`
-                        document.getElementById("num-remaining").innerHTML = `${formatDigit(values[3].length)} `
-                        document.getElementById("num-remaining-commits").innerHTML = ` [having made ${formatDigit(sum_remaining)} commits]`
-
-                        // Hide the ORCA bar if there are no ORCA recipients
-                        if(!orcaPresent) {
-                            document.getElementById("item-orca").style.display = `none`
-                            document.getElementById("item-not-ORCA-text").style.display = `none`
-                        }// if
-
-                        // Reveal the bar chart
-                        document.getElementById("bar-chart-wrapper").style.opacity = `1`
-                    } else {
-                        // Hide the bar chart
-                        // document.getElementById("bar-chart-wrapper").style.display = `none`
-                        // Hide the note in the explanation
-                        document.querySelectorAll(".note-remaining-contributors").forEach(d => d.style.display = `none`)
-                    }// else
-
-                    /////////////////////////////////////////////////
-                    // Let people download the raw data
-                    // const download_button = document.getElementById("dataviz-download-data")
-                    // download_button.addEventListener("click", () => {
-                    //     // Download all four datasets
-                    //     downloadData(data_raw[0], `${REPOSITORY}-top_contributors`)
-                    //     downloadData(data_raw[1], `${REPOSITORY}-repositories`)
-                    //     downloadData(data_raw[2], `${REPOSITORY}-links`)
-                    //     downloadData(data_raw[3], `${REPOSITORY}-remaining_contributors`)
-
-                    //     function downloadData(data, filename) {
-                    //         // Create a blob of the data
-                    //         let blob = new Blob([d3.csvFormat(data)], {type: "text/csv;charset=utf-8"})
-                    //         // Create a link to download it
-                    //         let link = document.createElement("a")
-                    //         link.href = window.URL.createObjectURL(blob)
-                    //         link.download = `${filename}.csv`
-                    //         // Click the link
-                    //         link.click()
-                    //     }// function downloadData
-                    // })//on click
-                })//promises
-            })//fonts.ready
-
-            /////////////////////////////////////////////////////////
-            ////////////////// Handle page resizing /////////////////
-            /////////////////////////////////////////////////////////
-
-            let current_width = window.innerWidth
-            let resizeTimer = null
-            window.addEventListener("resize", function () {
-                // Reset timer - Only resize if something truly appears to happen
-                // So added a little timeout
-                clearTimeout(resizeTimer)
-
-                resizeTimer = setTimeout(() => {
-                    // Only resize if the width is changed
-                    if (window.innerWidth !== current_width) {
-                        current_width = window.innerWidth
-
-                        // Get the new sizes
-                        let width = container.offsetWidth
-                        let height = width
-
-                        //Update the visual
-                        ORCAVisual
-                            .width(width)
-                            .height(height)
-                            .resize()
-                    }// if
-                }, 300)
-            })//on resize
-
-        </script>
+        <script src="visualize.js"></script>
 	</body>
 </html>
