feat: add some social

--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <title>pystac top contributors</title>
     <link rel="icon" type="image/x-icon" href="stac-python.png" />
 
+    <meta property="og:title" content="The Top Contributor Network to PySTAC" />
+    <meta property="og:site_name" content="Visual Cinnamon" />
+    <meta property="og:url"
+    content=https://www.gadom.ski/pystac-top-contributors/"" />
+    <meta
+      property="og:description"
+      content="An interactive visualization of the top contributors to pystac and their connections to other repositories"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="en_US" />
+    <meta
+      property="og:image"
+      content="https://nbremer.github.io/ORCA/top-contributor-network/pystac-top-contributors.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="3024" />
+    <meta property="og:image:height" content="2830" />
+
     <link rel="stylesheet" href="css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
