--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:image"
-      content="https://nbremer.github.io/ORCA/top-contributor-network/pystac-top-contributors.png"
+      content="https://www.gadom.ski/pystac-top-contributors/pystac-top-contributors.png"
     />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="3024" />
